--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -96,7 +96,7 @@
 .flc-uiOptions-plus-minus-numerical-minus, .flc-uiOptions-plus-minus-numerical-plus {
 	width: 10% !important;
 	//height: 2em !important;
-	//font-size: 1em !important;
+	font-size: 1.5em !important;
 	cursor: pointer;
 	text-align: center !important;
 	background-color: white;
@@ -107,7 +107,7 @@
 	-moz-user-select: none;
 	-o-user-select: none;
 	user-select: none;
-	padding-top: 0.25em;
+	//padding-top: 0.05em;
 }
 
 .flc-uiOptions-plus-minus-numerical-widget {
@@ -122,6 +122,7 @@
 	border: none !important;
 	//height: 2em !important;
 	text-align: center !important;
+	font-size: 1.5em !important;
 }
 
 input[type=checkbox] {
