Ugly hack for hooking to state change event of header checkbox in order to slide the adusters' panel.

--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -167,3 +167,7 @@ input[type=checkbox]:checked + label.headerTitle {
     height: 90px;
     width:330px;
 }
+
+.increaseSizePreferenceGroup {
+	display: none;
+}
