Sliding the category divs when sliding in order to work correctly. Styled things for sliding to work correctly.

--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -169,5 +169,9 @@ input[type=checkbox]:checked + label.headerTitle {
 }
 
 .increaseSizePreferenceGroup {
-	display: none;
+	padding-top: 100px;
+}
+
+.fl-uiOptions-category {
+	overflow: hidden;
 }
