--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -35,7 +35,7 @@
 }
 
 .gpii-addOrRemovePreference-label {
-    display: none;
+    /*display: none;*/
     color:transparent;
 }
 
@@ -87,7 +87,7 @@ textarea:focus, input:focus{
 #screen-reader-onoff {
     font-size:70%;
     float:left;
-    margin-left:30px;
+    margin-left:37px;
 }
 
 #braille-onoff {
@@ -164,15 +164,15 @@ select {
     margin: 0;
     -webkit-border-radius:4px;
     -moz-border-radius:4px;
-    border-radius:5px;
+    border-radius:3px;
     -webkit-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
     -moz-box-shadow: 0 3px 0 #ccc, 0 -1px #fff inset;
     box-shadow: 3px 3px 3px #C4C7C7, 0 0 #fff inset;
     background: #fff;
     color:#404042;
-    border:4px;
+    border:2px;
     border-style:solid;
-    border-color:#ff4400;
+    border-color:#D1DDDD;
     display: inline-block;
     -webkit-appearance:none;
     -moz-appearance:none;
