Renamed the adjuster icons class name.

--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -5,7 +5,10 @@
 	font-style: normal;
 }
 
-.fl-icon-cursor-icons {
+/*
+	
+*/
+.fl-adjuster-icons {
 	float: left;
 	font-family: 'adjuster-icons-aug-27';
 	speak: none;
