"Magnifier position" came as a replica of "Colour & contrast" since it had image radio buttons for selection. Now missing, 	1) Classes for the magnifier position font-icons. 	2) The bug when selecting that pops to top of page. Rename heading to "Magnifier position".

--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-magnifierPosition.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-magnifierPosition.html
@@ -1,4 +1,12 @@
 <h2>
-	<label class="flc-uiOptions-magnifier-position-label" for="magnifier-position"></label>
+	<label class="flc-uiOptions-magnifierPosition-heading"></label>
 </h2>
-<select class="flc-uiOptions-magnifier-position fl-inputs" id="magnifier-position"></select> 
+<div class="flc-uiOptions-magnifierPositionRow fl-choice">
+    <input type="radio" class="flc-uiOptions-magnifierPositionInput fl-hidden-accessible" name="magnifierPosition" id="magnifierPosition" />
+    <div class="fl-indicator"></div>
+    <label for="magnifierPosition" class="flc-uiOptions-magnifierPosition-label">
+        <span class="fl-preview-A"></span>
+        <span class="fl-hidden-accessible"></span>
+        <div class="fl-crossout"></div>
+    </label>
+</div>
