Fixed the bug with page popping to top when magnifier position is selected.

--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-magnifierPosition.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-magnifierPosition.html
@@ -2,7 +2,7 @@
 	<label class="flc-uiOptions-magnifierPosition-heading"></label>
 </h2>
 <div class="flc-uiOptions-magnifierPositionRow fl-choice">
-    <input type="radio" class="flc-uiOptions-magnifierPositionInput fl-hidden-accessible" name="magnifierPosition" id="magnifierPosition" />
+    <input type="radio" class="flc-uiOptions-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
     <div class="fl-indicator"></div>
     <label for="magnifierPosition" class="flc-uiOptions-magnifierPosition-label">
         <span class="fl-preview-A"></span>
