--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -52,7 +52,7 @@
    	text-align: center;
 }
 
-input[type=checkbox] {
+input[type=checkbox], input[type=radio] {
     position: absolute;
     display: none;
     clip: rect(0 0 0 0);
