--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -2,8 +2,8 @@
 	Font icons
 */
 @font-face {
-	font-family: 'adjuster-icons-aug-27';
-	src:url('../fonts/adjuster-icons-aug-27.ttf') format('truetype');
+	font-family: 'icons-no-frames-aug-29';
+	src:url('../fonts/icons-no-frames-aug-29.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -41,12 +41,10 @@
 	Header's styling
 */
 .headerImage {
-	font-family: 'increase-size';
 	-webkit-font-smoothing: antialiased;
 	width: 330;
    	height:90;
-	float: left;
-	line-height: 1;
+   	margin-top: 4px !important;
 	margin:5px;
     cursor:default;
 	font-size: 90px !important;
@@ -54,11 +52,11 @@
 	background-color: white;
 }
 input[type=checkbox] + .headerImage:before {
-	content: "\e000";
+	content: "\e00d";
 }
 
 input[type=checkbox]:checked + .headerImage:before {
-	content: "\e001";
+	content: "\e00e";
 }
 
 .adjusterGroupTitle {
@@ -123,7 +121,7 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 */
 .fl-adjuster-icons {
 	float: left;
-	font-family: 'adjuster-icons-aug-27';
+	font-family: 'icons-no-frames-aug-29';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -134,11 +132,11 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 }
 .fl-icon-small-cursor:before {
 	font-size: 0.8em !important;
-	content: "\e00e";
+	content: "\e000";
 }
 .fl-icon-big-cursor:before {
 	font-size: 1.9em !important;
-	content: "\e00f";
+	content: "\e000";
 }
 .fl-icon-small-cursor {
 	width: 30px;
