--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -232,6 +232,7 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 	padding: 0 !important;
 	cursor: pointer;
 	background-color: white;
+	margin-bottom: 5px !important;
 }
 
 .fl-magnifierPosition-uio-icon {
@@ -246,13 +247,19 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 }
 
 .fl-magnifierPosition-uio-background {
-	height: 5.1em !important;
+	height: 4.9em !important;
 	width: 6.3em !important;
+	padding-top: 2px;
 }
 
 .fl-magnifierPosition-uio-background:before {
 	font-size: 4.8em !important;
 	content: "\e00b" !important;
+}
+	
+.fl-magnifierPosition-uio-frame:before {
+	font-size: 5em !important;
+	content: "\e008" !important;
 }
 	
 .fl-magnifierPosition-uio-lens > .fl-magnifierPosition-uio-icon:before {
