--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -232,7 +232,8 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 	padding: 0 !important;
 	cursor: pointer;
 	background-color: white;
-	margin-bottom: 5px !important;
+	margin-bottom: 0.5em !important;
+	margin-right: 0.5em !important;
 }
 
 .fl-magnifierPosition-uio-icon {
@@ -266,3 +267,18 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 	content: "\e00a";
 } 
 
+/*
+	Style for magnifier position indicator
+*/
+.fl-uiOptions .fl-icon-indicator:before, .fl-uiOptions .fl-choice input:checked + div:before {
+    content: "\e007";
+}
+.fl-uiOptions .fl-choice .fl-indicator {
+    font-family: 'icons-no-frames-aug-29' !important;
+    font-size: 0.8em;
+ 	color: #636c7c;
+ 	position: relative;
+ 	top: 0.4em;
+    height: 1em !important;
+    margin: -0.75em 0 0 2.15em !important;
+}
