--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -278,7 +278,48 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 	content: "\e009";
 	font-size: 4.7em !important;
 	color: #00a9bd;
-} 
+}
+
+.fl-magnifierPosition-uio-top > .fl-magnifierPosition-uio-icon-main:before {
+	content: "\e005";
+}
+
+.fl-magnifierPosition-uio-bottom > .fl-magnifierPosition-uio-icon-main {
+	transform:rotateX(180deg);
+	-ms-transform:rotate(180deg); /* IE 9 */
+	-webkit-transform:rotate(180deg); /* Safari and Chrome */
+	position: relative;
+	top: 5em;
+}
+
+.fl-magnifierPosition-uio-bottom > .fl-magnifierPosition-uio-icon-main:before {
+	content: "\e005";
+}
+
+.fl-magnifierPosition-uio-left > .fl-magnifierPosition-uio-icon-main {
+	transform:rotate(270deg) scaleX(0.8) scaleY(1.24);
+	-ms-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* IE 9 */
+	-webkit-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* Safari and Chrome */
+	position: relative;
+	top: 5.05em;
+}
+
+.fl-magnifierPosition-uio-left > .fl-magnifierPosition-uio-icon-main:before {
+	content: "\e005";
+}
+
+.fl-magnifierPosition-uio-right > .fl-magnifierPosition-uio-icon-main {
+	transform:rotate(90deg) scaleX(0.81) scaleY(1.24);
+	//-ms-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* IE 9 */
+	//-webkit-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* Safari and Chrome */
+	position: relative;
+	left: 6.3em;
+	top: 0.07em;
+}
+
+.fl-magnifierPosition-uio-right > .fl-magnifierPosition-uio-icon-main:before {
+	content: "\e005";
+}
 
 /*
 	Style for magnifier position indicator
