--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-magnifierFollows.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-magnifierFollows.html
@@ -3,7 +3,7 @@
 </h2>
 <div class="flc-uiOptions-magnifierFollowsRow fl-choice">
     <input type="checkbox" class="flc-uiOptions-magnifierFollowsInput" name="magnifierFollows" id="magnifierFollows" />
-    <div class="fl-indicator"></div>
+    <!-- <div class="fl-indicator"></div> -->
     <label for="magnifierFollows" class="flc-uiOptions-magnifierFollows-label">
         <span class="fl-preview-A"></span>
         <span class="fl-hidden-accessible"></span>
