--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -258,7 +258,7 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 	content: "\e00b" !important;
 }
 	
-.fl-magnifierPosition-uio-frame:before {
+.fl-magnifierPosition-uio-fullscreen > .fl-magnifierPosition-uio-frame:before {
 	font-size: 5em !important;
 	content: "\e008" !important;
 }
@@ -285,11 +285,11 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 }
 
 .fl-magnifierPosition-uio-bottom > .fl-magnifierPosition-uio-icon-main {
-	transform:rotateX(180deg);
-	-ms-transform:rotate(180deg); /* IE 9 */
-	-webkit-transform:rotate(180deg); /* Safari and Chrome */
-	position: relative;
-	top: 5em;
+	//transform:rotateX(180deg);
+	//-ms-transform:rotate(180deg); /* IE 9 */
+	//-webkit-transform:rotate(180deg); /* Safari and Chrome */
+	//position: relative;
+	//top: 5em;
 }
 
 .fl-magnifierPosition-uio-bottom > .fl-magnifierPosition-uio-icon-main:before {
@@ -297,11 +297,11 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 }
 
 .fl-magnifierPosition-uio-left > .fl-magnifierPosition-uio-icon-main {
-	transform:rotate(270deg) scaleX(0.8) scaleY(1.24);
-	-ms-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* IE 9 */
-	-webkit-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* Safari and Chrome */
-	position: relative;
-	top: 5.05em;
+	//transform:rotate(270deg) scaleX(0.8) scaleY(1.24);
+	//-ms-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* IE 9 */
+	//-webkit-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* Safari and Chrome */
+	//position: relative;
+	//top: 5.05em;
 }
 
 .fl-magnifierPosition-uio-left > .fl-magnifierPosition-uio-icon-main:before {
@@ -309,12 +309,12 @@ input[type=checkbox]:checked + .headerImage + label.headerTitle {
 }
 
 .fl-magnifierPosition-uio-right > .fl-magnifierPosition-uio-icon-main {
-	transform:rotate(90deg) scaleX(0.81) scaleY(1.24);
+	//transform:rotate(90deg) scaleX(0.81) scaleY(1.24);
 	//-ms-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* IE 9 */
 	//-webkit-transform:rotate(270deg) scaleX(0.78) scaleY(1.24); /* Safari and Chrome */
-	position: relative;
-	left: 6.3em;
-	top: 0.07em;
+	//position: relative;
+	//left: 6.3em;
+	//top: 0.07em;
 }
 
 .fl-magnifierPosition-uio-right > .fl-magnifierPosition-uio-icon-main:before {
