This is an initial, clumsy way of previewing changes to text-size only.

--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -407,3 +407,10 @@ input:checked + .flc-uiOptions-magnifierFollows-label > .fl-magnifierFollows-uio
 .fl-magnifierFollows-legend::first-letter {
     text-transform: capitalize;
 }
+
+/*
+	Style for preview-per-setting iframe
+*/
+.flc-uiOptions-preview-per-setting-frame {
+	width: 100% !important;
+}
