--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -1,7 +1,7 @@
 .preference {
     margin-left: 45px;
     /*font-family: 'Roboto Slab', serif;*/
-    font-family: 'Open Sans', sans-serif;
+    /*font-family: 'Open Sans', sans-serif;*/
 }
 
 .gpii-punctuationVerbosity-description {
@@ -34,6 +34,7 @@
 }
 
 .speech-rate {
+    position: relative;
     display: none;
 }
 
@@ -42,6 +43,11 @@
     border: none;
     width: 200px;
     font-size: 23px;
+    display: inline;
+}
+
+#speechRateLabel {
+    font-size: 85%;
 }
 
 #speechRateMinus {
@@ -53,11 +59,12 @@
     font-weight: bold;
 }
 
-textarea:focus, input:focus{
+textarea:focus, input:focus {
     outline: 0;
 }
 
 .more-options {
+    padding-top: 20px;
     cursor:pointer;
     display: none;
     font-size: 15px;
@@ -67,6 +74,8 @@ textarea:focus, input:focus{
 
 .expanded-top {
     display: none;
+    height: 55px;
+    padding-bottom: -50px;
 }
 
 .expanded-bottom {
@@ -98,11 +107,12 @@ input[type="radio"] + label.radioButton-left {
     background: url('../images/radioButton-leftOff.png') no-repeat;
     width: auto;
     height: auto;
-    position: absolute;
+    display:inline-block;
+    position: relative;
     font-size: 15px;
     line-height: 30px;
     padding-top: 25px;
-    padding-right: 40px;
+    padding-right: 20px;
     vertical-align: center;
 }
 
@@ -112,10 +122,8 @@ input[type="radio"]:checked + label.radioButton-left {
 
 input[type="radio"] + label.radioButton-middle {
     background: url('../images/radioButton-middleOff.png') no-repeat;
-    width: auto;
-    height: auto;
     position: relative;
-    display:inline-block;
+    display:inline;
     font-size: 15px;
     padding-top: 31px;
     padding-right: 10px;
@@ -123,7 +131,7 @@ input[type="radio"] + label.radioButton-middle {
 }
 
 input[type="radio"] + label.radioButton-second {
-    margin-left: 40px;
+    margin-left: -19px;
 }
 
 input[type="radio"] + label.radioButton-third {
@@ -139,20 +147,20 @@ input[type="radio"] + label.radioButton-right {
     background: url('../images/radioButton-rightOff.png') no-repeat;
     width: auto;
     height: auto;
-    position: absolute;
+    position: relative;
     font-size: 15px;
     display:inline-block;
     line-height: 30px;
     padding-top: 25px;
-    padding-right: 29px;
-    padding-left: 22px;
+    padding-right: 15px;
+    padding-left: 23px;
+    margin-left: -7px;
     vertical-align: center;
 }
 
 input[type="radio"]:checked + label.radioButton-right {
     background: url('../images/radioButton-rightOn.png') no-repeat;
 }
-
 select {
     padding:4px;
     margin: 0;
@@ -187,6 +195,10 @@ input[type=checkbox] {
     margin:-1px;
     padding:0;
     border:0;
+}
+
+input[type=checkbox] + label.checkbox-label {
+    font-family: 'Open Sans', sans-serif;
 }
 
 input[type=checkbox] + label.pref-checkbox-label {
