--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-cursorSize.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-cursorSize.html
@@ -1,5 +1,8 @@
 <div class="flc-uiOptions-cursor-size">
     <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-uiOptions-cursor-size-label" for="cursor-size"></label></h2>
+
+    <iframe class="flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+
     <div class="fl-inputs">
         <div class="fl-force-left">
             <div class="fl-adjuster-icons fl-icon-small-cursor" role="img"></div>
