--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-plusMinusNumerical.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-plusMinusNumerical.html
@@ -1,7 +1,9 @@
 <div class="flc-uiOptions-plus-minus-numerical">
     <h2><label class="flc-uiOptions-plus-minus-numerical-label"></label></h2>
     
-    <iframe class="flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    <div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-container">
+    	<iframe class="flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+    </div>
 
     <div class="flc-uiOptions-plus-minus-numerical-widget">
 	    <label class="flc-uiOptions-plus-minus-numerical-minus"></label>
