--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-cursorSize.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-cursorSize.html
@@ -2,6 +2,8 @@
     <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-uiOptions-cursor-size-label" for="cursor-size"></label></h2>
 
     <div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-container">
+    	<div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-eye"></div>
+    	<div class="flc-uiOptions-preview-per-setting-eye-background"></div>
     	<iframe class="flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 
