--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-plusMinusNumerical.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-plusMinusNumerical.html
@@ -1,7 +1,9 @@
 <div class="flc-uiOptions-plus-minus-numerical">
     <h2><label class="flc-uiOptions-plus-minus-numerical-label"></label></h2>
     
-    <div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-container">
+    <div class="flc-uiOptions-preview-per-setting-container">
+    	<div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-eye"></div>
+    	<div class="flc-uiOptions-preview-per-setting-eye-background"></div>
     	<iframe class="flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 
