Set the transform origin to 0,0,0 for magnification scaling transformation.

--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -11,6 +11,11 @@
 /*
 	General preferences styling
 */
+
+body {
+	transform-origin: 0 0 0;	
+}
+
 .preference {
 	background:#ECEFEF;
 	width: 340px;
